[FIX] align people tag on the left

--- a/app/assets/stylesheets/components/_ui-tag-cloud.scss
+++ b/app/assets/stylesheets/components/_ui-tag-cloud.scss
@@ -76,6 +76,7 @@
     @include border-radius(4px);
     color: $green;
     padding: 0 4px !important;
+    margin-left: -5px;
     width: auto;
 
     &:hover {
